--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "predev": "cd src-tauri && cargo test",
     "dev": "bun run --watch --port 1420 src/index.html",
+    "dev:safe": "powershell -ExecutionPolicy Bypass -File dev-safe.ps1",
     "build": "rm -rf dist && bun build --minify --target browser --outdir dist src/index.html",
     "preview": "bun dist/index.html"
   },
