--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -1,7 +1,7 @@
 name: Build Release Artifacts
 on:
   push:
-    tags: ["*"]
+    tags: ["v*"]
   pull_request:
     branches: ["main"]
   workflow_dispatch:
@@ -21,10 +21,30 @@ jobs:
         with:
           workspaces: "./src-tauri"
 
+      # Update version based on tag
+      - name: Update Version
+        if: startsWith(github.ref, 'refs/tags/v')
+        shell: powershell
+        run: |
+          $tag = "${{ github.ref_name }}"
+          # Remove 'v' prefix if present (e.g. v1.2.3 -> 1.2.3)
+          if ($tag.StartsWith("v")) { $version = $tag.Substring(1) } else { $version = $tag }
+
+          Write-Host "Syncing version to $version"
+
+          $path = "src-tauri/Cargo.toml"
+          # Replace 'version = "x.y.z"' with new version
+          # Note: this targets the [workspace.package] version line which usually starts with 'version ='
+          (Get-Content $path) -replace '^version = ".*"', "version = `"$version`"" | Set-Content $path
+
+          # Optional: Verify output
+          Get-Content $path | Select-String "version =" | Select-Object -First 5
+
       - run: bun install --linker=isolated && bun run --bun tauri build
         env:
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
+
       - run: 7z a -tzip LeagueRecord_${{ github.ref_name }}_x64_en-US.zip LeagueRecord.exe ../libobs licenses LICENSE.txt
         working-directory: ./src-tauri/target/release/
 
@@ -34,5 +54,4 @@ jobs:
           prerelease: true
           body: |
             Windows-x64 installer and portable version.
-            The \"portable\" requires a version of the webview2 runtime to be installed and won't work without it.
-            Windows 11 should have the Webview2 runtime installed by default.
+            Version: ${{ github.ref_name }}
